[tool.poetry]
name = "llms-from-scratch"
version = "0.1.0"
description = ""
authors = ["Berkay Dinç <berkayydinc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.7.0"
torch = "^2.4.0"
notebook = "^7.2.2"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
